--- a/blog/papers/2018/0813.md
+++ b/blog/papers/2018/0813.md
@@ -12,7 +12,7 @@
 
 ## Abstract
 
-我们提出了对Inception的解释，它是普通卷积和深度可分卷积的中间步骤（深度可分卷积后跟着点级别的卷积）。这样，深度可分卷积可以理解为一个Inception模块和最大数量的塔。这样一个新的结构就是Inception模块替换为深度可分卷积，这个结构我们叫它Xception，在ImageNet上比Inception V3好一点，在更大的图像分类上好很多。由于Xception和Inception V3参数数量一样，因此性能提升不是由于模型的容量，而是模型参数的高效利用。
+我们提出了对Inception的解释，它是普通卷积和深度可分卷积的中间步骤（深度可分卷积后跟着点卷积）。这样，深度可分卷积可以理解为一个Inception模块和最大数量的塔。这样一个新的结构就是Inception模块替换为深度可分卷积，这个结构我们叫它Xception，在ImageNet上比Inception V3好一点，在更大的图像分类上好很多。由于Xception和Inception V3参数数量一样，因此性能提升不是由于模型的容量，而是模型参数的高效利用。
 
 ## Introduction
 
@@ -34,7 +34,7 @@
 
 ![xception-fig-3-4](R/xception-fig-3-4.png)
 
-一个深度可分卷积，通常叫做可分卷积，意思是通道输入中间的空间卷积是独立的，跟着一个点级别的卷积，1\*1的卷积，映射到一个新的通道空间。不要和空间可分卷积搞混，这也通常叫做可分卷积。
+一个深度可分卷积，通常叫做可分卷积，意思是通道输入中间的空间卷积是独立的，跟着一个点卷积，1\*1的卷积，映射到一个新的通道空间。不要和空间可分卷积搞混，这也通常叫做可分卷积。
 
 这个极限版本和深度可分卷积的两个小的不同是：
 
