--- a/blog/algo/2018081318.md
+++ b/blog/algo/2018081318.md
@@ -62,10 +62,10 @@ def findAnagrams(self, s, p):
     return result
 ```
 
-但是有一个麻烦的问题是这个方法在字符串很长的情况下会超时，因为每次排序是个耗时的操作，但是我们要在无序的情况下比较自然也不能穷举，考虑到每个字符的都是小写字母，因此我们可以记录子串的个数，对26个字母进行统计，这样我们就能够在无序的情况下做到子串的比较了。这里还有一个点是我们不能每次对一个子串都重新计数，也会遇到时间很长的问题，考虑到每次移动一位的话，中间部分的信息是可以重复利用的，这是一个滑动窗，所以我们可以每次移动的时候，对滑动出去的计数减1，新进来加1，这样每次技术的计算量小了很多。这里是网上的一个代码：
+但是有一个麻烦的问题是这个方法在字符串很长的情况下会超时，因为每次排序是个耗时的操作，但是我们要在无序的情况下比较自然也不能穷举，考虑到每个字符的都是小写字母，因此我们可以记录子串的个数，对26个字母进行统计，这样我们就能够在无序的情况下做到子串的比较了。这里还有一个点是我们不能每次对一个子串都重新计数，也会遇到时间很长的问题，考虑到每次移动一位的话，中间部分的信息是可以重复利用的，这是一个滑动窗，所以我们可以每次移动的时候，对滑动出去的计数减1，新进来加1，这样每次技术的计算量小了很多。这里是网上的一个代码（[来源](https://leetcode.com/problems/find-all-anagrams-in-a-string/discuss/92009/Python-Sliding-Window-Solution-using-Counter)）：
 
 ``` python
- from collections import Counter
+from collections import Counter
 
 def findAnagrams(self, s, p):
     res = []
