--- a/blog/rl-notes/201807201554.md
+++ b/blog/rl-notes/201807201554.md
@@ -110,7 +110,7 @@ for episode in range(total_episodes):
 
     episode += 1
     # Reduce epsilon (because we need less and less exploration)
-    epsilon = min_epsilon + (max_epsilon - min_epsilon)*np.exp(-decay_rate*episode
+    epsilon = min_epsilon + (max_epsilon - min_epsilon)*np.exp(-decay_rate*episode)
     rewards.append(total_rewards)
 
 print ("Score over time: " +  str(sum(rewards)/total_episodes))
