update distributed ml

--- a/blog/2018/111911.md
+++ b/blog/2018/111911.md
@@ -8,6 +8,18 @@
 
 ---
 
+<head>
+    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
+            tex2jax: {
+            skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+            inlineMath: [['$','$']]
+            }
+        });
+    </script>
+</head>
+
 来自Berkeley CS120x课程第二周Distributed ML。
 
 ## Computation and Storage
