--- a/blog/2018/121916.md
+++ b/blog/2018/121916.md
@@ -61,7 +61,7 @@ $$M _ { c } ( x , y ) = \sum _ { k } w _ { k } ^ { c } A _ { k } ( x , y )$$
 
 ## Grad-CAM
 
-CAM可以得到不错的解释效果，但是它需要修改模型结构，需要重新训练，这就极大限制了应用场景，而后出现的Grad-CAM解决了这个问题。Grad-CAM 思路与 CAM 基本一致，主要区别在于求权重的过程，Grad-CAM使用梯度的全局平均来计算权重（这里修改了符号表示）：
+CAM可以得到不错的解释效果，但是它需要修改模型结构，需要重新训练，这就极大限制了应用场景，而后出现的Grad-CAM解决了这个问题。Grad-CAM 思路与 CAM 基本一致，主要区别在于求权重的过程，Grad-CAM使用梯度的全局平均来计算权重：
 
 $$\alpha_k^c = 
 \overbrace{\frac{1}{Z} \sum_i \sum_j}^\text{global average pooling}
