--- a/blog/2018/121916.md
+++ b/blog/2018/121916.md
@@ -32,14 +32,21 @@
 
 ## 反卷积与导向反向传播
 
-ZFNet使用的反卷积网络如下图。反卷积采用的方法是建立一个与原网络相反的卷积网络，通过反向池化、反向整流、反向卷积重建了网络的学习过程。最大池化通常是不可逆的，通过记录池化的位置信息进行近似反向池化， ReLU 用于激活层的反向整流，卷积层使用相同卷积核的转置，但是加入整流映射后，通过反卷积网络的分析可以清楚看到网络对特征的提取过程和敏感特征分
-布。
+ZFNet使用的反卷积网络如下图。反卷积采用的方法是建立一个与原网络相反的卷积网络，通过反向池化、反向整流、反向卷积重建了网络的学习过程。最大池化通常是不可逆的，通过记录池化的位置信息进行近似反向池化， ReLU 用于激活层的反向整流，卷积层使用相同卷积核的转置，但是加入整流映射后，通过反卷积网络的分析可以清楚看到网络对特征的提取过程和敏感特征分布。
 
 ![deconv-net](R/cnn-vis-deconv.png)
+
+部分可视化效果如图：
+
+![deconv-result](R/cnn-vis-deconv-result.png)
 
 但如果单纯用反卷积，我们将得到一个可解释性不是很好的图片，有人提出了guided backpropagation，通过更加细致的定位来得到一个更清晰的信息，它和反向传播，反卷积的区别如下图。
 
 ![guide-bp](R/cnn-vis-guided-bp.png)
+
+部分可视化效果如图：
+
+![guide-bp-result](R/cnn-vis-guided-bp-result.png)
 
 ## CAM
 
@@ -58,6 +65,10 @@ $$\begin{aligned} Y ^ { c } & = \sum _ { k } w _ { k } ^ { c } \sum _ { x , y } 
 $$M _ { c } ( x , y ) = \sum _ { k } w _ { k } ^ { c } A _ { k } ( x , y )$$
 
 因此$Y _ { c } = \sum _ { x , y } M _ { c } ( x , y )$，那么对于空间位置$(x, y)$上的激活重要性就可以用$M_c(x,y)$表示。CAM的最终结果是不同卷积层特征图叠加，最后叠加到原图上。
+
+部分可视化效果如图：
+
+![cam-result](R/cnn-vis-cam-result.png)
 
 ## Grad-CAM
 
@@ -85,6 +96,10 @@ $$Y ^ { c } = \frac { 1 } { Z } \sum _ { i } \sum _ { j } \underbrace{\sum _ { k
 
 可以明显看到Grad-CAM是CAM的泛化形式，CAM是Grad-CAM的特例。
 
+部分效果如图：
+
+![grad-cam-result](R/cnn-vis-grad-cam-result.png)
+
 ## Grad-CAM++
 
 虽然Grad-CAM等方法效果不错但是，这些方法有局限性，例如多个同类目标同时出现的定位，即使是单一物体，Grad-CAM也不能定位完全。
@@ -106,6 +121,12 @@ $$Y ^ { c } = \sum _ { k } \left[ \sum _ { i } \sum _ { j } \left\{ \sum _ { a }
 与Grad-CAM的对比图如下：
 
 ![result](R/cnn-vis-result.png)
+
+## 总结
+
+可以看到CAM系列基于梯度计算激活图的方式有很好的可视化效果，对类别预测贡献较大的区域被高亮出来，我们可以更好的看到网络真正提取特征的地方，这有助于我们分析网络训练的情况及其特性，对于解释网络各部分具体功能和贡献有很大意义。
+
+同时我们可以看到的是，网络虽然对于重要区域有明显激活，但是对于不重要区域依然有一定的激活，说明网络存在一定的过拟合现象，其学到的特征鲁棒性还有待提升，如何通过分析网络的对图像区域的激活情况指导网络更高效，更鲁棒是一个值得探索的问题。
 
 [1]: Zeiler, Matthew D., and Rob Fergus. "Visualizing and understanding convolutional networks." European conference on computer vision. Springer, Cham, 2014.
 
