update blog gan-application

--- a/blog/2018/120918.md
+++ b/blog/2018/120918.md
@@ -80,19 +80,21 @@ $$R_{\beta}(W) = \beta \left\| W^{T}W\odot (1-I) \right\|_{F}^{2}$$
 
 ### 特征空间的损失
 
-为了更好的控制优化过程，对CNN的特征进行了约束，在生成器中加入了对神经网络中间生成特征的损失函数：
+为了更好的控制优化过程，对CNN的特征进行了约束，在生成器中加入了对神经网络中间生成特征的损失函数，这里使用了判别器的特征作为约束：
 
 $$\mathcal { L } _ { f } = \mathbb { E } _ { n , j } \lambda _ { f } ^ { j } \left\| F ^ { j } ( G ( x ) ) - F ^ { j } ( y ) \right\| _ { 2 } ^ { 2 }$$
 
-其中的j是判别器网络的一层，$F^j$是对应层的激活。
+其中的j是判别器网络的一层，$F^j$是对应层的激活。有趣的是，权重导致了不同的结果。对于λf>0，损失项鼓励最小化真实和生成数据特征的距离，所以生成的特征类似于目标的特征。令人惊讶的是，在λf<0训练也有很好的结果，甚至比前面的更好。由于使用的是条件GAN，所以网络高度受限于输入。作者对这种情况的解释是负特征损失鼓励了生成不同于特征的优化结果，但是依旧很像目标特征。
 
 ### 短暂相关性的损失
 
-由于生成的每一帧都是独立的，所以一个挑战是让相邻帧的具有相关性。对此作者加入了短暂相关性的损失：
+由于生成的每一帧都是独立的，所以一个挑战是让相邻帧的具有相关性。对此作者加入了短暂相关性的损失，使得生成的每一帧能够联系更加紧密：
 
 $$\mathcal { L } _ { 2 , t } = \left\| G \left( x ^ { t } \right) - \mathcal { A } \left( G \left( x ^ { t - 1 } \right) , v _ { x } ^ { t - 1 } \right) \right\| _ { 2 } ^ { 2 } + \left\| G \left( x ^ { t } \right) - \mathcal { A } \left( G \left( x ^ { t + 1 } \right) , - v _ { x } ^ { t + 1 } \right) \right\| _ { 2 } ^ { 2 }$$
 
-其中的$\mathcal { A }$来自$y ^ { t } = \mathcal { A } \left( y ^ { t - 1 } , v _ { y } ^ { t - 1 } \right)$，称作对流算子，$v$是速度。虽然这个损失提升了短暂相关性，但是在测试中发现他的效果小。而且这个损失的副作用是它容易直接减少$G(x)$来优化。
+其中的$\mathcal { A }$来自$y ^ { t } = \mathcal { A } \left( y ^ { t - 1 } , v _ { y } ^ { t - 1 } \right)$，称作对流算子，$v$是速度。虽然这个损失提升了短暂相关性，但是在测试中发现他的效果小。而且这个损失的副作用是它容易让网络直接减少$G(x)$来优化。因此提出了一个变种：
+
+$$\mathcal { L } _ { D _ { t } ^ { \prime } } \left( D _ { t } ^ { \prime } , G \right) = \mathbb { E } _ { m } \left[ - \log D _ { t } ( \widetilde { Y } ) \right] + \mathbb { E } _ { n } \left[ - \log \left( 1 - D _ { t } ( \widetilde { G } ( \tilde { X } ) ) \right) \right]$$
 
 ### 完整的算法
 
@@ -103,6 +105,11 @@ $$\mathcal { L } _ { D _ { t } } \left( D _ { t } , G \right) = - \mathbb { E } 
 $$\mathcal { L } _ { D _ { s } } \left( D _ { s } , G \right) = - \mathbb { E } _ { m } \left[ \log D _ { s } ( x , y ) \right] - \mathbb { E } _ { n } \left[ \log \left( 1 - D _ { s } ( x , G ( x ) ) \right) \right]$$
 
 $$\begin{aligned} \mathcal { L } _ { G } \left( D _ { s } , D _ { t } , G \right) = & - \mathbb { E } _ { n } \left[ \log D _ { s } ( x , G ( x ) ) \right] - \mathbb { E } _ { n } \left[ \log D _ { t } \left( \widetilde { G } _ { \mathcal { A } } ( \widetilde { X } ) \right) \right] \\ & + \mathbb { E } _ { n , j } \lambda _ { f } ^ { j } \left\| F ^ { j } ( G ( x ) ) - F ^ { j } ( y ) \right\| _ { 2 } ^ { 2 } + \lambda _ { L _ { 1 } } \mathbb { E } _ { n } \| G ( x ) - y \| _ { 1 } \end{aligned}$$
+
+在所有生成器的损失项中，L1项在稳定训练中的重要性小。但是由于优化问题的复杂性，它对于训练的成功还是有帮助的。特征空间的损失，直接影响到了生成的特征。在对抗的设定中，判别器最可能学到不同的特征。因此在训练中，生成器获得梯度来产出更多来自目标F(y)的特征，而来自F(G(x)
+的梯度会惩罚那些属于生成的特征。
+
+λf强化了这个行为，但是为何某些类中负值可以导致更好的结果依旧不是很清楚。
 
 ### 网络结构和训练
 
@@ -124,6 +131,8 @@ for number of training steps do
         Update G with ∇G [LG (Ds, Dt, G)]
 ```
 ---
+
+可以看到和经典的GAN训练过程基本一致，区别是由于多加了一个判别器，所以多了一个判别器的训练步骤。
 
 ### 生成的样例
 
