fix formula mistake

--- a/blog/2019/0111.md
+++ b/blog/2019/0111.md
@@ -52,7 +52,7 @@ $$\begin{array} { l } { \max \sum _ { i , j } z _ { i } W _ { i j } ^ { s } z _ 
 
 和
 
-$$\begin{array} { l } { \min \sum _ { i , j } z _ { i } W _ { i j } ^ { d } z _ { j } ^ { \top } = \operatorname { tr } \left( Z W ^ { d } Z ^ { \top } \right) } \\ { = \operatorname { tr } \left( \left[ V _ { h } X _ { h } , P V _ { l } X _ { l } \right] \left[ \begin{array} { c c } { 0 } & { W _ { h } ^ { d } ] } \\ { W _ { l } ^ { d } } \end{array} \right. \left[ V _ { h } X _ { h } , P V _ { l } X _ { l } \right] ^ { \top } \right) } \\ = { \operatorname { tr } \left( \left( P V _ { l } X _ { l } \right) W _ { l } ^ { d } \left( V _ { h } X _ { h } \right) ^ { \top } + \left( V _ { h } X _ { h } \right) W _ { h } ^ { d } \left( P V _ { l } X _ { l } \right) ^ { \top } \right) } \end{array}$$
+$$\begin{array} { l } { \min \sum _ { i , j } z _ { i } W _ { i j } ^ { d } z _ { j } ^ { \top } = \operatorname { tr } \left( Z W ^ { d } Z ^ { \top } \right) } \\ { = \operatorname { tr } \left( \left[ V _ { h } X _ { h } , P V _ { l } X _ { l } \right] \left[ \begin{array} { c c } { 0 } & { W _ { h } ^ { d } } \\ { W _ { l } ^ { d } }  & { 0 } \end{array} \right] \left[ V _ { h } X _ { h } , P V _ { l } X _ { l } \right] ^ { \top } \right) } \\ = { \operatorname { tr } \left( \left( P V _ { l } X _ { l } \right) W _ { l } ^ { d } \left( V _ { h } X _ { h } \right) ^ { \top } + \left( V _ { h } X _ { h } \right) W _ { h } ^ { d } \left( P V _ { l } X _ { l } \right) ^ { \top } \right) } \end{array}$$
 
 结合起来我们得到：
 
