update blog openai spinning up part 1

--- a/blog/rl-notes/20190114.md
+++ b/blog/rl-notes/20190114.md
@@ -70,7 +70,7 @@ $$a_t = \mu(s_t),$$
 
 或者是随机的，表示为$\pi$：
 
-$$a_t \sim \pi(\cdot | s_t).$$
+$$a_t \sim \pi(\cdot \vert s_t).$$
 
 策略本质上是agent的大脑，因此将“策略”一词替换为“agent”也比较常见，例如可以说“策略试图最大化奖励”。
 
@@ -78,7 +78,7 @@ $$a_t \sim \pi(\cdot | s_t).$$
 
 我们经常用$\theta$或$\phi$表示这种策略的参数，将其写在策略符号下标：
 
-$$a_t = \mu_{\theta}(s_t) \\ a_t \sim \pi_{\theta}(\cdot | s_t).$$
+$$a_t = \mu_{\theta}(s_t) \\ a_t \sim \pi_{\theta}(\cdot \vert s_t).$$
 
 #### Deterministic Policies
 
@@ -104,7 +104,7 @@ actions = tf.layers.dense(net, units=act_dim, activation=None)
 > *Sampling* 基于每个行为的概率，Tensorflow等框架有内置的采样工具来采样。例如tf.distributions.Categorical文档或tf.multinomial。
 > 
 > *Log-Likelihood*。将最后一层概率表示为$P _ {\ theta}(s)$。它是一个向量，我们可以将行为视为向量的索引，然后通过向量索引来获取动作$a$的对数似然：
-> $$\log \pi_{\theta}(a|s) = \log \left[P_{\theta}(s)\right]_a.$$
+> $$\log \pi_{\theta}(a \vert s) = \log \left[P_{\theta}(s)\right]_a.$$
 
 > **Diagonal Gaussian Policies** 多元高斯分布(或多元正态分布)由平均向量$μ$和协方差矩阵$\Sigma$来描述。对角高斯分布是一种特殊情况，其中协方差矩阵仅在对角线上具有值，因此我们可以用向量表示它。
 > 
@@ -121,7 +121,7 @@ actions = tf.layers.dense(net, units=act_dim, activation=None)
 > 其中$\odot$表示两个向量的元素乘积。框架都具有计算噪声向量的内置方法，例如tf.random_normal。
 > 
 > *Log-Likelihood* 对于具有均值$\mu = \mu _ {\theta}(s)$和标准差$\sigma = \sigma _ {\theta}(s)$的对角高斯分布，k维行为a的对数似然性由下式给出：
-> $$\log \pi_{\theta}(a|s) = -\frac{1}{2}\left(\sum_{i=1}^k \left(\frac{(a_i - \mu_i)^2}{\sigma_i^2} + 2 \log \sigma_i \right) + k \log 2\pi \right).$$
+> $$\log \pi_{\theta}(a \vert s) = -\frac{1}{2}\left(\sum_{i=1}^k \left(\frac{(a_i - \mu_i)^2}{\sigma_i^2} + 2 \log \sigma_i \right) + k \log 2\pi \right).$$
 
 ### Trajectories
 
@@ -139,7 +139,7 @@ $$s_{t+1} = f(s_t, a_t)$$
 
 也可以是随机的：
 
-$$s_{t+1} \sim P(\cdot|s_t, a_t).$$
+$$s_{t+1} \sim P(\cdot \vert s_t, a_t).$$
 
 行动由agent根据其策略采取。
 
@@ -175,11 +175,11 @@ $$R(\tau) = \sum_{t=0}^{\infty} \gamma^t r_t.$$
 
 我们假设环境转换和策略都是随机的。 在这种情况下，T步轨迹的概率为：
 
-$$P(\tau|\pi) = \rho_0 (s_0) \prod_{t=0}^{T-1} P(s_{t+1} | s_t, a_t) \pi(a_t | s_t).$$
+$$P(\tau \vert \pi) = \rho_0 (s_0) \prod_{t=0}^{T-1} P(s_{t+1} \vert s_t, a_t) \pi(a_t \vert s_t).$$
 
 由$J(\pi)$表示预期收益为：
 
-$$J ( \pi ) = \int _ { \tau } P ( \tau | \pi ) R ( \tau ) = \underset { \tau \sim \pi } { \mathrm { E } } [ R ( \tau ) ]$$
+$$J ( \pi ) = \int _ { \tau } P ( \tau \vert \pi ) R ( \tau ) = \underset { \tau \sim \pi } { \mathrm { E } } [ R ( \tau ) ]$$
 
 RL中的核心优化问题可以表示为：
 
@@ -195,19 +195,19 @@ $$\pi^* = \arg \max_{\pi} J(\pi),$$
 
 * **On-Policy Value Function**，$V ^ {\pi}(s)$，从状态s开始并且总是根据策略$\pi$执行行为，它会给出预期的回报为：
 
-    $$V^{\pi}(s) = \underset {\tau \sim \pi}E [R(\tau)\left| s_0 = s \right]$$
+    $$V^{\pi}(s) = \underset {\tau \sim \pi}E [R(\tau)\left\vert s_0 = s \right]$$
 
 * **On-Policy Action-Value Function**，$Q ^ {\ pi}(s，a)$，从状态s开始，采取任意行动a(可能不是来自策略),总是根据策略$\pi$执行行为,它给出预期的回报：
 
-    $$Q^{\pi}(s,a) = \underset {\tau \sim \pi}E[R(\tau)\left| s_0 = s, a_0 = a\right.]$$
+    $$Q^{\pi}(s,a) = \underset {\tau \sim \pi}E[R(\tau)\left\vert s_0 = s, a_0 = a\right.]$$
 
 * **Optimal Value Function**, $V ^ *(s)$，从状态s开始并且始终根据环境中的*最优*策略执行，则给出预期的回报：
 
-    $$V^*(s) = \max_{\pi} \underset {\tau \sim \pi}E[R(\tau)\left| s_0 = s\right.]$$
+    $$V^*(s) = \max_{\pi} \underset {\tau \sim \pi}E[R(\tau)\left\vert s_0 = s\right.]$$
 
 * **Optimal Action-Value Function**，$Q ^ *(s，a)$，从状态s开始，采取任意动作a，然后根据环境中的*最优*策略采取行动，给出预期回报：
 
-    $$Q^*(s,a) = \max_{\pi} \underset{\tau \sim \pi}E[R(\tau)\left| s_0 = s, a_0 = a\right.]$$
+    $$Q^*(s,a) = \max_{\pi} \underset{\tau \sim \pi}E[R(\tau)\left\vert s_0 = s, a_0 = a\right.]$$
 
 > 在谈论价值函数时，如果不考虑时间依赖性，那就只是在表示无限期折现回报的期望均值。有限期无折现回报的值函数需要有时间作为参数。
 
@@ -237,7 +237,7 @@ On-Policy Value Function的Bellman方程是
 $$V^{\pi}(s) = \underset {a \sim \pi \\ s'\sim P}E[r(s,a) + \gamma V^{\pi}(s')], \\ 
 Q^{\pi}(s,a) = \underset{s'\sim P}E[r(s,a) + \gamma \underset{a'\sim \pi}E[Q^{\pi}(s',a')],$$
 
-其中$s'\sim P$是$s'\sim P(\cdot | s，a)$的简写，表示从环境转换规则中采样的下一个状态$s'$; $a \sim \pi$是$\sim \pi(\cdot | s)$的简写; 而$a'\sim \pi$是$a'\sim \pi(\cdot | s')$的简写。
+其中$s'\sim P$是$s'\sim P(\cdot \vert s，a)$的简写，表示从环境转换规则中采样的下一个状态$s'$; $a \sim \pi$是$\sim \pi(\cdot \vert s)$的简写; 而$a'\sim \pi$是$a'\sim \pi(\cdot \vert s')$的简写。
 
 Optimal Value Function的Bellman方程是
 
@@ -249,7 +249,7 @@ On-Policy Value Function与Optimal Value Function的Bellman方程之间的关键
 
 在RL中，我们不去描述行为绝对好多少，而只需要说它比其它行为平均好多少。也就是说，我们想知道该行为的**相对优势**，优势函数将精确描述这个概念。
 
-对于策略$\pi$的优势函数$A ^ {\pi}(s，a)$描述了在状态s中采取特定动作a比根据$\pi(\cdot | s)$随机选择动作要好多少,这里假设一直按照$\pi$采取行动。在数学上优势函数定义为：
+对于策略$\pi$的优势函数$A ^ {\pi}(s，a)$描述了在状态s中采取特定动作a比根据$\pi(\cdot \vert s)$随机选择动作要好多少,这里假设一直按照$\pi$采取行动。在数学上优势函数定义为：
 
 $$A^{\pi}(s,a) = Q^{\pi}(s,a) - V^{\pi}(s).$$
 
@@ -262,7 +262,7 @@ $$A^{\pi}(s,a) = Q^{\pi}(s,a) - V^{\pi}(s).$$
 * $S$ is the set of all valid states,
 * $A$ is the set of all valid actions,
 * $R$ : $S \times A \times S \to \mathbb{R}$ is the reward function, with $r_t = R(s_t, a_t, s_{t+1})$,
-* $P$ : $S \times A \to \mathcal{P}(S)$ is the transition probability function, with $P(s'|s,a)$ being the probability of transitioning into state s' if you start in state s and take action a,
+* $P$ : $S \times A \to \mathcal{P}(S)$ is the transition probability function, with $P(s'\verts,a)$ being the probability of transitioning into state s' if you start in state s and take action a,
 * and $\rho_0$ is the starting state distribution.
 
 马尔可夫决策过程这个名称指的是系统服从马尔可夫属性：状态转换只取决于最近的状态和行动，而不是先前的历史。
