update attention transfer

--- a/blog/papers/2019/0114.md
+++ b/blog/papers/2019/0114.md
@@ -61,9 +61,9 @@ $$\mathcal { F } : R ^ { C \times H \times W } \rightarrow R ^ { H \times W }$$
 
 具体而言，我们考虑如下的空间注意力图：
 
-* 绝对值求和： $F _ { \operatorname { sum } } ( A ) = \sum _ { i = 1 } ^ { C } \left| A _ { i } \right|$
-* 绝对值指数求和，指数大于1： $F _ { \mathrm { sum } } ^ { p } ( A ) = \sum _ { i = 1 } ^ { C } \left| A _ { i } \right| ^ { p }$
-* 绝对值指数求最大值： $F _ { \max } ^ { p } ( A ) = \max _ { i = 1 , C } \left| A _ { i } \right| ^ { p }$
+* 绝对值求和： `$F _ { \operatorname { sum } } ( A ) = \sum _ { i = 1 } ^ { C } \left| A _ { i } \right|$`
+* 绝对值指数求和，指数大于1： `$F _ { \mathrm { sum } } ^ { p } ( A ) = \sum _ { i = 1 } ^ { C } \left| A _ { i } \right| ^ { p }$`
+* 绝对值指数求最大值： `$F _ { \max } ^ { p } ( A ) = \max _ { i = 1 , C } \left| A _ { i } \right| ^ { p }$`
 
 其中， $A _ { i } = A ( i , : , : )$(MATLAB 记号)，最大值，指数和绝对值都是元素级别的操作。
 
