--- a/blog/papers/2019/0218.md
+++ b/blog/papers/2019/0218.md
@@ -50,7 +50,7 @@ $$\min _ { G } \max _ { D } \mathbb { E } _ { \mathbf { x } \sim \mathcal { X } 
 
 ### 3.1 PROBLEM SETTING
 
-令$\mathcal { X } = \left\{ \mathbf { x } ^ { 1 } , \ldots \mathbf { x } ^ { N } \right\}$为未标记样本的数据集。我们考虑从$X$无监督地学习判别分类器$D$的问题，使得$D$将数据分类为先验选择的类别$K$.此外，我们需要$D(x)$来产生条件概率分布，即$\sum _ { k = 1 } ^ { K } p ( y = k \vert \mathbf { x } , D ) = 1$。接下来学习的目的是训练概率分类器$D$，其类别分配满足拟合优度。值得注意的是，由于样本的真实类别分布未知，我们必须借助于中间测量来判断分类器性能，而不是仅仅最小化目标函数，例如负对数似然。具体而言，我们将总是优选D，使其对于给定示例$x$的条件类别分布$p(y \vert x,D)$具有高确定性，而边际类别分布$p(y \vert D)$接近于先验分布$p(y)$。我们将始终假设一个统一的类别先验，即我们期望$X$中每个类的样本数量对于所有k是相同的:$\forall k , k ^ { \prime } \in K : p ( y = k \vert D ) = p \left( y = k ^ { \prime } \vert D \right)$
+令$\mathcal { X } = { \mathbf { x } ^ { 1 } , \ldots \mathbf { x } ^ { N } }$为未标记样本的数据集。我们考虑从$X$无监督地学习判别分类器$D$的问题，使得$D$将数据分类为先验选择的类别$K$.此外，我们需要$D(x)$来产生条件概率分布，即$\sum _ { k = 1 } ^ { K } p ( y = k \vert \mathbf { x } , D ) = 1$。接下来学习的目的是训练概率分类器$D$，其类别分配满足拟合优度。值得注意的是，由于样本的真实类别分布未知，我们必须借助于中间测量来判断分类器性能，而不是仅仅最小化目标函数，例如负对数似然。具体而言，我们将总是优选D，使其对于给定示例$x$的条件类别分布$p(y \vert x,D)$具有高确定性，而边际类别分布$p(y \vert D)$接近于先验分布$p(y)$。我们将始终假设一个统一的类别先验，即我们期望$X$中每个类的样本数量对于所有k是相同的:$\forall k , k ^ { \prime } \in K : p ( y = k \vert D ) = p ( y = k ^ { \prime } \vert D )$
 
 在这个问题的第一个观察是，它可以自然的看做是“软”或概率群集分配任务。因此，原则上可以通过概率聚类算法来解决，例如正则化信息最大化（RIM），或相关的熵最小化。所有这些方法都倾向于过度拟合数据中的虚假相关性，这是我们旨在通过将判别器与对抗生成模型配对来缓解的问题，其必须变得鲁棒。顺便提一下，我们的方法可以被理解为RIM健壮的扩展，RIM中对抗提供了自适应正则化机制。
 
@@ -86,11 +86,11 @@ $$\begin{aligned} \mathbb { E } _ { \mathbf { x } \sim \mathcal { X } } [ H [ p 
 
 来自生成器的样本的条件熵经验估计可以表示为对于噪声向量$z$先验分布$P(z)$的$H [ p ( y \vert G ( \mathbf { z } ) , D ) ]$的期望，我们可以进一步通过蒙特卡罗抽样近似得到：
 
-$$\mathbb { E } _ { \mathbf { z } \sim P ( \mathbf { z } ) } \left[ H [ p ( y \vert D ( \mathbf { z } ) , D ) ] \right] \approx \frac { 1 } { M } \sum _ { i = 1 } ^ { M } H [ p ( y \vert G \left( \mathbf { z } ^ { i } \right) , D ) ]  \quad with \quad \mathbf { z } ^ { i } \sim P ( \mathbf { z } )  \quad (5)$$
+$$\mathbb { E } _ { \mathbf { z } \sim P ( \mathbf { z } ) } \[ H [ p ( y \vert D ( \mathbf { z } ) , D ) ] ] \approx \frac { 1 } { M } \sum _ { i = 1 } ^ { M } H [ p ( y \vert G ( \mathbf { z } ^ { i } ) , D ) ]  \quad with \quad \mathbf { z } ^ { i } \sim P ( \mathbf { z } )  \quad (5)$$
 
 其中$M$表示样本数量（我们简单地设置为等于N）。为了满足所有类应该均等使用的第三个要求（对应于均匀的边际分布）我们可以根据$X$和$G$的样本经验性地测量边际类别分布的熵：
 
-$$\begin{aligned} H _ { \mathcal { X } } [ p ( y \vert D ) ] & = H \left[ \frac { 1 } { N } \sum _ { i = 1 } ^ { N } p ( y \vert \mathbf { x } ^ { i } , D ) \right] \\ H _ { G } [ p ( y \vert D ) ] & \approx H \left[ \frac { 1 } { M } \sum _ { i = 1 } ^ { M } p ( y \vert G \left( \mathbf { z } ^ { i } \right) , D ) \right] , \text { with } \mathbf { z } ^ { i } \sim P ( \mathbf { z } ) \end{aligned} \quad (6)$$
+$$\begin{aligned} H _ { \mathcal { X } } [ p ( y \vert D ) ] & = H [ \frac { 1 } { N } \sum _ { i = 1 } ^ { N } p ( y \vert \mathbf { x } ^ { i } , D ) ] \\ H _ { G } [ p ( y \vert D ) ] & \approx H [ \frac { 1 } { M } \sum _ { i = 1 } ^ { M } p ( y \vert G ( \mathbf { z } ^ { i } ) , D ) ] , \text { with } \mathbf { z } ^ { i } \sim P ( \mathbf { z } ) \end{aligned} \quad (6)$$
 
 这些熵中的第二个可以用于定义让生成器满足要求（ii）的最大化问题。从生成器角度满足条件（i）最终等于最小化而不是最大化等式（5）。结合方程（4,5,6）的定义，我们可以为判别器定义CatGAN目标函数，我们用$\mathcal { L } _ { D }$来指代，生成器用$\mathcal { L } _ { G }$表示： 
 
@@ -98,13 +98,13 @@ $$\begin{aligned}\mathcal { L } _ { D } & = \max _ { D } H _ { \mathcal { X } } 
 
 其中$H$表示如上定义的经验熵，并且我们选择它定义生成器的目标函数$\mathcal { L } _ { G }$。该公式满足上述所有要求，并且具有简单的信息理论解释：判别器希望最大化$\mathcal { L } _ { D }$中的前两项，即数据分布与预测类别分布之间的互信息，同时最小化信息编码$G(\mathbf { z })$。类似地，$\mathcal { L } _ { G }$中的前两个项估计生成的样本的分布与预测的类分布之间的互信息。
 
-由于我们关注于大型数据集上优化（7），所以我们希望$\mathcal { L } _ { G }$和$\mathcal { L } _ { D }$能够通过批量$\chi _ { B }$数据的小批量随机梯度下降进行优化。式（7）中的条件熵项仅由每个样本熵的和组成，因此可以简单地适用于分批计算。然而，边缘熵$H _ { \mathcal { X } } [ p ( y \vert D ) ]$和$H _ { G } [ p ( y \vert D ) ]$在整个数据集$X$中或在熵计算中包含来自$G$的大量样本中的总和，因此不能分批量计算。如果判别器需要预测的类别数量$K$远小于批量大小$B$，则对此问题的一个简单解决方法是仅在随机小批量中估计$B$个示例的边际类别分布：$H _ { \mathcal { X } } [ p ( y \vert D ) ] \approx H \left[ \frac { 1 } { B } \sum _ { \mathbf { x } \in \mathcal { X } _ { B } } p ( y \vert \mathbf { x } ^ { i } , D ) \right]$。对于$H _ { G } [ p ( y \vert D ) ]$我们可以类似地仅使用B样本计算估计。我们注意到虽然这种近似对于我们考虑的问题是合理的，但对于类别特别多的情况也是有问题的，这种情况下只能在多个批量上估计边缘类别分布。
+由于我们关注于大型数据集上优化（7），所以我们希望$\mathcal { L } _ { G }$和$\mathcal { L } _ { D }$能够通过批量$\chi _ { B }$数据的小批量随机梯度下降进行优化。式（7）中的条件熵项仅由每个样本熵的和组成，因此可以简单地适用于分批计算。然而，边缘熵$H _ { \mathcal { X } } [ p ( y \vert D ) ]$和$H _ { G } [ p ( y \vert D ) ]$在整个数据集$X$中或在熵计算中包含来自$G$的大量样本中的总和，因此不能分批量计算。如果判别器需要预测的类别数量$K$远小于批量大小$B$，则对此问题的一个简单解决方法是仅在随机小批量中估计$B$个示例的边际类别分布：$H _ { \mathcal { X } } [ p ( y \vert D ) ] \approx H [ \frac { 1 } { B } \sum _ { \mathbf { x } \in \mathcal { X } _ { B } } p ( y \vert \mathbf { x } ^ { i } , D ) ]$。对于$H _ { G } [ p ( y \vert D ) ]$我们可以类似地仅使用B样本计算估计。我们注意到虽然这种近似对于我们考虑的问题是合理的，但对于类别特别多的情况也是有问题的，这种情况下只能在多个批量上估计边缘类别分布。
 
 ### 3.3 EXTENSION TO SEMI-SUPERVISED LEARNING
 
-我们现在将考虑将第3.2节中的公式调整为半监督。 设$\mathcal { X } ^ { L } = \left\{ \left( \mathbf { x } ^ { 1 } , \mathbf { y } ^ { 1 } \right) , \left( \mathbf { x } ^ { L } , \mathbf { y } ^ { L } \right) \right\}$是一组$L$个标记的样本，one-hot 编码标签向量$\mathbf { y } ^ { i } \in \mathbb { R } ^ { K }$，此外还有$N$个无标签的样本。通过计算预测的条件分布$p ( y \vert \mathbf { x } , D )$与$\mathcal { X } ^ { L }$中样本的真实标签分布之间的交叉熵，可以将这些附加样本结合到等式（7）的目标函数中。标记数据对$( \mathbf { x } , \mathbf { y } )$的交叉熵给出为
+我们现在将考虑将第3.2节中的公式调整为半监督。 设$\mathcal { X } ^ { L } = { ( \mathbf { x } ^ { 1 } , \mathbf { y } ^ { 1 } ) , ( \mathbf { x } ^ { L } , \mathbf { y } ^ { L } ) }$是一组$L$个标记的样本，one-hot 编码标签向量$\mathbf { y } ^ { i } \in \mathbb { R } ^ { K }$，此外还有$N$个无标签的样本。通过计算预测的条件分布$p ( y \vert \mathbf { x } , D )$与$\mathcal { X } ^ { L }$中样本的真实标签分布之间的交叉熵，可以将这些附加样本结合到等式（7）的目标函数中。标记数据对$( \mathbf { x } , \mathbf { y } )$的交叉熵给出为
 
-$$C E [ \mathbf { y } , p ( y \vert \mathbf { x } , D ) ] = - \sum _ { i = 1 } ^ { K } y _ { i } \log p \left( y = y _ { i } \vert \mathbf { x } , D \right)$$
+$$C E [ \mathbf { y } , p ( y \vert \mathbf { x } , D ) ] = - \sum _ { i = 1 } ^ { K } y _ { i } \log p ( y = y _ { i } \vert \mathbf { x } , D )$$
 
 半监督的CatGAN通过两个目标$\mathcal { L } _ { D } ^ { L }$（用于判别器）和$\mathcal { L } _ { G } ^ { L }$（用于生成器）给出
 
