--- a/blog/papers/2019/0219.md
+++ b/blog/papers/2019/0219.md
@@ -203,7 +203,7 @@ $$\mathbb { E } _ { x } [ \mathrm { KL } ( C ( x ) \Vert \overline { C } ^ { G }
 
 由于两个单独的指标是强相关的，这里我们回到初始得分的原始公式$\mathbb { E } _ { x } [ \mathrm { KL } ( C ( x ) \Vert \overline { C } ^ { G } ) ]$。在这种形式中，我们可以将IS分数解释为它要求每个样本的分布$C ( x )$与生成器的整体分布$\overline { C } ^ { G }$高度不同，这表明生成的样本具有良好的多样性。
 
-根据实验观察，模式崩溃的生成器通常获得较低的IS分数。在极端的情况下，假设所有生成的样本都崩溃到一个点，$C ( x ) = C ^ { G }$，我们将获得最小的IS分数1.0，这是exp0结果。为了在更复杂的情况下模拟模式崩溃，我们设计实验如下：给出N点集合$\left\{ x _ { 0 } , x _ { 1 } , x _ { 2 } , \dots , x _ { N - 1 } \right\}$，每个点$x_i$采用分布$C \left( x _ { i } \right) = v ( i )$并表示类i，其中$v ( i )$是长度为N的向量化算子，如2.1节的定义，我们随机地删除$m$个点，评估$\mathbb { E } _ { x } [ \mathrm { KL } ( C ( x ) \Vert \overline { C } ^ { G } ) ]$并绘制曲线。如图5所示，当$N-m$增加时，$\mathbb { E } _ { x } [ \mathrm { KL } ( C ( x ) \Vert \overline { C } ^ { G } ) ]$的值一般单调增加，这意味着它可以很好地捕获模式丢失和生成分布的多样性。
+根据实验观察，模式崩溃的生成器通常获得较低的IS分数。在极端的情况下，假设所有生成的样本都崩溃到一个点，$C ( x ) = C ^ { G }$，我们将获得最小的IS分数1.0，这是exp0结果。为了在更复杂的情况下模拟模式崩溃，我们设计实验如下：给出N点集合$\{ x _ { 0 } , x _ { 1 } , x _ { 2 } , \dots , x _ { N - 1 } \}$，每个点$x_i$采用分布$C \left( x _ { i } \right) = v ( i )$并表示类i，其中$v ( i )$是长度为N的向量化算子，如2.1节的定义，我们随机地删除$m$个点，评估$\mathbb { E } _ { x } [ \mathrm { KL } ( C ( x ) \Vert \overline { C } ^ { G } ) ]$并绘制曲线。如图5所示，当$N-m$增加时，$\mathbb { E } _ { x } [ \mathrm { KL } ( C ( x ) \Vert \overline { C } ^ { G } ) ]$的值一般单调增加，这意味着它可以很好地捕获模式丢失和生成分布的多样性。
 
 剩下的一个问题是良好的模式覆盖和样本多样性是否意味着高质量的生成样本。从以上分析，我们没有找到任何证据。一个可能的解释是在实践中样本多样性通常与样本质量密切相关。 
 
